[tool.poetry]
name = "llama-index-rag"
version = "0.1.0"
description = ""
authors = ["ArJSarmiento <rneljan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "0.11.1"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-vector-stores-chroma = "^0.2.0"
llama-index-llms-ollama = "^0.3.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
